--- a/input.css
+++ b/input.css
@@ -52,6 +52,7 @@
 }
 
  .swiper-slide {
+    max-height: 100%;
     /* Center slide text vertically */
     display: -webkit-box;
         display: -ms-flexbox;
@@ -67,4 +68,9 @@
         align-items: center;
  }
 
-
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
